tests/baselines/reference/circularTypeAliasForUnionWithClass.errors.txt
circularTypeAliasForUnionWithClass.ts(4,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== circularTypeAliasForUnionWithClass.ts (1 errors) ====
    var v0: T0;
    type T0 = string | I0;
    class I0 {
        x: T0;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    var v3: T3;
    type T3 = string | I3;
    class I3 {
        [x: number]: T3;
    }
    
    var v4: T4;
    type T4 = string | I4;
    class I4 {
        [x: string]: T4;
    }
    